apps/60-services/mail/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mail
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
