apps/60-services/mail/base/mailserver-traefik-tcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailserver-smtp
  namespace: mail
spec:
  entryPoints: [smtp]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailserver
          port: 25
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailserver-smtps
  namespace: mail
spec:
  entryPoints: [smtps]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailserver
          port: 465
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailserver-submission
  namespace: mail
spec:
  entryPoints: [submission]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailserver
          port: 587
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailserver-imaps
  namespace: mail
spec:
  entryPoints: [imaps]
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mailserver
          port: 993
