apps/60-services/mail/base/gmail-import-egress-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gmail-import-egress
  namespace: mail
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gmail-import
      app.kubernetes.io/component: importer
      app.kubernetes.io/part-of: truxonline-mail
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: imap.gmail.com
      toPorts:
        - ports:
            - port: "993"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mail
            k8s:app.kubernetes.io/name: mailserver
            k8s:app.kubernetes.io/part-of: truxonline-mail
      toPorts:
        - ports:
            - port: "993"
              protocol: TCP
