apps/60-services/mail/base/roundcube-traefik-ingress-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: roundcube-traefik-ingress
  namespace: mail
  labels:
    environment: prod
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: roundcube
      app.kubernetes.io/part-of: truxonline-mail
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            k8s:app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
